--- a/templates/add_perm_templ.html
+++ b/templates/add_perm_templ.html
@@ -7,24 +7,24 @@
     </ol>
 </nav>
 
-<h5 class="mb-3">{% trans %}Add permission template{% endtrans %}</h5>
-<form class="needs-validation" method="post" action="index.php?page=add_perm_templ" novalidate>
+<h5 class="mb-3" data-testid="add-permission-template-heading">{% trans %}Add permission template{% endtrans %}</h5>
+<form class="needs-validation" method="post" action="index.php?page=add_perm_templ" novalidate data-testid="add-permission-template-form">
     <input type="hidden" name="_token" value="{{ csrf_token }}">
     <div class="col-sm-3">
         <div class="mb-2">
             <label for="templ_name" class="form-label">{% trans %}Name{% endtrans %}</label>
-            <input class="form-control form-control-sm" type="text" id="templ_name" name="templ_name" value="" required>
-            <div class="invalid-feedback">{% trans %}Provide a name for your template{% endtrans %}</div>
+            <input class="form-control form-control-sm" type="text" id="templ_name" name="templ_name" value="" required data-testid="template-name-input">
+            <div class="invalid-feedback" data-testid="template-name-error">{% trans %}Provide a name for your template{% endtrans %}</div>
         </div>
         <div class="mb-2">
             <label for="templ_descr" class="form-label">{% trans %}Description{% endtrans %}</label>
-            <input class="form-control form-control-sm" type="text" id="templ_descr" name="templ_descr" value="">
+            <input class="form-control form-control-sm" type="text" id="templ_descr" name="templ_descr" value="" data-testid="template-description-input">
         </div>
     </div>
 
     <hr>
 
-    <table class="table table-striped table-hover table-sm">
+    <table class="table table-striped table-hover table-sm" data-testid="permissions-table">
         <thead>
         <tr>
             <th>&nbsp;</th>
@@ -32,18 +32,18 @@
             <th>{% trans %}Description{% endtrans %}</th>
         </tr>
         </thead>
-        <tbody>
+        <tbody data-testid="permissions-tbody">
         {% for perm in perms_avail %}
         {% set descr = perm['descr'] %}
-        <tr>
-            <td><input class="form-check-input" type="checkbox" name="perm_id[]" value="{{ perm['id'] }}"></td>
-            <td>{{ perm['name'] }}</td>
+        <tr data-testid="permission-row-{{ perm['id'] }}">
+            <td><input class="form-check-input" type="checkbox" name="perm_id[]" value="{{ perm['id'] }}" data-testid="permission-checkbox-{{ perm['id'] }}"></td>
+            <td data-testid="permission-name-{{ perm['id'] }}">{{ perm['name'] }}</td>
             <td>{{ descr|trans }}</td>
         </tr>
         {% endfor %}
         </tbody>
     </table>
     <div class="pt-3">
-        <input type="submit" class="btn btn-primary btn-sm" name="commit" value="{% trans %}Update{% endtrans %}">
+        <input type="submit" class="btn btn-primary btn-sm" name="commit" value="{% trans %}Update{% endtrans %}" data-testid="submit-template-button">
     </div>
 </form>
