--- a/templates/edit_perm_templ.html
+++ b/templates/edit_perm_templ.html
@@ -7,26 +7,26 @@
     </ol>
 </nav>
 
-<h5 class="mb-3">{% trans %}Edit permission template{% endtrans %}</h5>
-<form class="needs-validation" method="post" action="" novalidate>
+<h5 class="mb-3" data-testid="edit-permission-template-heading">{% trans %}Edit permission template{% endtrans %}</h5>
+<form class="needs-validation" method="post" action="" novalidate data-testid="edit-permission-template-form">
     <input type="hidden" name="_token" value="{{ csrf_token }}">
     <input type="hidden" name="templ_id" value="{{ id }}">
 
     <div class="col-sm-3">
         <div class="mb-2">
             <label for="templ_name" class="form-label">{% trans %}Name{% endtrans %}</label>
-            <input class="form-control form-control-sm" type="text" id="templ_name" name="templ_name" value="{{ templ['name'] }}" required>
-            <div class="invalid-feedback">{% trans %}Provide a name for your template{% endtrans %}</div>
+            <input class="form-control form-control-sm" type="text" id="templ_name" name="templ_name" value="{{ templ['name'] }}" required data-testid="template-name-input">
+            <div class="invalid-feedback" data-testid="template-name-error">{% trans %}Provide a name for your template{% endtrans %}</div>
         </div>
         <div class="mb-2">
             <label for="templ_descr" class="form-label">{% trans %}Description{% endtrans %}</label>
-            <input class="form-control form-control-sm" type="text" id="templ_descr" name="templ_descr" value="{{ templ['descr'] }}">
+            <input class="form-control form-control-sm" type="text" id="templ_descr" name="templ_descr" value="{{ templ['descr'] }}" data-testid="template-description-input">
         </div>
     </div>
 
     <hr>
 
-    <table class="table table-striped table-hover table-sm">
+    <table class="table table-striped table-hover table-sm" data-testid="permissions-table">
         <thead>
         <tr>
             <th>&nbsp;</th>
@@ -35,9 +35,9 @@
         </tr>
         </thead>
 
-        <tbody>
+        <tbody data-testid="permissions-tbody">
         {% for permission in perms_avail %}
-        <tr>
+        <tr data-testid="permission-row-{{ permission['id'] }}">
             {% set descr = permission['descr'] %}
             {% set has_perm = "" %}
             {% for template in perms_templ %}
@@ -45,12 +45,12 @@
             {% set has_perm = "checked" %}
             {% endif %}
             {% endfor %}
-            <td><input class="form-check-input" type="checkbox" name="perm_id[]" value="{{ permission['id'] }}" {{ has_perm }}></td>
-            <td>{{ permission['name'] }}</td>
+            <td><input class="form-check-input" type="checkbox" name="perm_id[]" value="{{ permission['id'] }}" {{ has_perm }} data-testid="permission-checkbox-{{ permission['id'] }}"></td>
+            <td data-testid="permission-name-{{ permission['id'] }}">{{ permission['name'] }}</td>
             <td>{{ descr|trans }}</td>
         </tr>
         {% endfor %}
         </tbody>
     </table>
-    <input type="submit" class="btn btn-primary btn-sm" name="commit" value="{% trans %}Update{% endtrans %}">
+    <input type="submit" class="btn btn-primary btn-sm" name="commit" value="{% trans %}Update{% endtrans %}" data-testid="submit-template-button">
 </form>
